--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <h1>Jeven Shirrell</h1>
           </div>
         </header>
-
+      <img src="jevenphoto.jpg" alt="Jeven Shirrell"></img>
+      
       <h1>About Me</h1>
-      <p>Hi, I'm Jeven Shirrell, a 15-year-old high school freshman who loves music and programming. I have been making games for the past 4 years now, and I've even started my own shop on Fiverr where I make games for people. My musical journey started in 2019 when I started making my own songs on an iPad. This evolved over the past 5 years to where I am now using my laptop and MIDI devices to make my own beats that I have another separate Fiverr shop for. I also play drums for my band called Three Heart Cross, which writes a mix of Christian and secular music in a wide range of genres. We have opened up for some pretty big names, such as Spoken and Disciple.</p>
+      <p>Hi, I'm Jeven Shirrell, a 15-year-old high school freshman who loves music and computer programming. I have been developing video games for the past 4 years now, and I've even started my own freelance shop on Fiverr where I make custom games for people. My musical journey started in 2019 when I started making my own songs on an iPad. This evolved over the past 5 years to where I am now using my laptop and MIDI devices to make my own beats that I market through another separate Fiverr shop. I also play drums for my band called Three Heart Cross, which writes a mix of Christian and secular music in a wide range of genres. We have opened up for some pretty big names, such as Spoken and Disciple.</p>
 
       <h1>Contact</h1>
       <ul>
@@ -57,12 +58,12 @@
       <h1>Experience</h1>
       <ul>
         <li>Lead Developer of Living Water Studios</li>
-        <li>Freelance Game Developer on Fiverr</li>
+        <li>Freelance Game Developer on <a href="https://www.fiverr.com/batidudeex?up_rollout=true">Fiverr</a></li>
         <li>Drummer for Three Heart Cross</li>
       </ul>
     </div>
   </div>
-
+ 
   <script src="scrollbar.js"></script>
 </body>
 </html>
